# remove-dupe

./: README.md  TAGS  remove-dupe.cabal  stack.yaml
data/: foo-3.txt
src/: Main.hs
