name:                remove-dupe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/konn/remove-dupe#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2018 (c) Hiromi ISHII
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable remove-dupe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -O2
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , byteable
                     , bytestring
                     , conduit
                     , cryptohash-conduit
                     , cryptohash
                     , directory
                     , mtl
                     , transformers
                     , unordered-containers
